# libtai

./: CMakeLists.txt  Makefile  build_linux.sh  build_msvc10.bat  caldate.h  caldate_mjd.c  caldate_scan.c  caltime_tai.c  caltime_utc.c  check.c  converter.c  easter.c  leapsecs.c  leapsecs.txt  leapsecs_add.c  leapsecs_init.c  leapsecs_read.c  leapsecs_sub.c  nowutc.c  tai_now.c  tai_pack.c  tai_unpack.c  yearcal.c
include/: caldate.h  caltime.h  leapsecs.h  tai.h
